--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     const buildUrl = "Build";
     const loaderUrl = buildUrl + "/rrr.loader.js";
     const config = {
-      dataUrl: buildUrl + "/rrr.data.unityweb",
-      frameworkUrl: buildUrl + "/rrr.framework.js.unityweb",
-      codeUrl: buildUrl + "/rrr.wasm.unityweb",
-        symbolsUrl: buildUrl + "/rrr.symbols.json.unityweb",
+      dataUrl: buildUrl + "/rrr.data",
+      frameworkUrl: buildUrl + "/rrr.framework.js",
+      codeUrl: buildUrl + "/rrr.wasm",
+        symbolsUrl: buildUrl + "/rrr.symbols.json",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
       productName: "Taxi_Webgl",
