--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>test_Taxi</title>
+  <title>Taxi_Webgl</title>
   <link rel="stylesheet" href="TemplateData/style.css">
   <script src="TemplateData/gamescore-unity.js"></script>
   <script>
@@ -51,10 +51,11 @@
       dataUrl: buildUrl + "/rrr.data.unityweb",
       frameworkUrl: buildUrl + "/rrr.framework.js.unityweb",
       codeUrl: buildUrl + "/rrr.wasm.unityweb",
+        symbolsUrl: buildUrl + "/rrr.symbols.json.unityweb",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
-      productName: "test_Taxi",
-      productVersion: "0.1",
+      productName: "Taxi_Webgl",
+      productVersion: "0.1.0",
     };
 
     const container = document.querySelector("#unity-container");
