--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         dataUrl: buildUrl + "/ccc.data.unityweb",
         frameworkUrl: buildUrl + "/ccc.framework.js.unityweb",
         codeUrl: buildUrl + "/ccc.wasm.unityweb",
+        symbolsUrl: buildUrl + "/ccc.symbols.json.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "test_ttt",
