--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Taxi_MyGame</title>
+  <title>Taxi_Webgl</title>
   <link rel="stylesheet" href="TemplateData/style.css">
   <script src="TemplateData/gamescore-unity.js"></script>
   <script>
@@ -54,7 +54,7 @@
         symbolsUrl: buildUrl + "/rrr.symbols.json.unityweb",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
-      productName: "Taxi_MyGame",
+      productName: "Taxi_Webgl",
       productVersion: "0.1.0",
     };
 
