--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       container.className = "unity-mobile";
     }
 
+    canvas.style.background = "url('" + buildUrl + "/rrr.jpg.unityweb') center / cover";
     loadingCover.style.display = "";
 
     const script = document.createElement("script");
