--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <style>
     body {
         background-image: url('rere.png');
-        background-repeat: no-repeat !important;
-        background-size: cover !important;
-        background-position: center !important;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 </style>
 
