--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     <canvas id="unity-canvas"></canvas>
   </div>
   <div id="loading-cover" style="display:none;">
-    <div id="unity-loading-bar">
-      <div id="unity-label"></div>      
-      <div id="unity-progress-bar-empty" style="display: none;">
+    <div id="unity-loading-bar">      
+      <div id="unity-logo"><img src="wewe.png"></div>
+    <div id="unity-label"></div>
+    <div id="unity-progress-bar-empty" style="display: none;">
         <div id="unity-progress-bar-full"></div>
       </div>
       <div class="spinner"></div>
