--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     body {
         background-image: url('rere.png');
         background-repeat: no-repeat !important;
-        background-size: cove !important;
+        background-size: cover !important;
         background-position: center !important;
     }
 </style>
