--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
   </div>
 
   <script>
+
+    const userLanguage = navigator.language || navigator.userLanguage;
+    let logoSrc = "logo_en.png";
+    if (userLanguage.startsWith("es")) {
+        logoSrc = "logo_es.png";
+    } else if (userLanguage.startsWith("ru")) {
+        logoSrc = "logo_ru.png";
+    } else{
+        logoSrc = "logo_en.png";
+    }
+
+    // set logo source
+    const unityLogo = document.querySelector("#unity-logo");
+    unityLogo.src = logoSrc;
+
+
     const buildUrl = "Build";
     const loaderUrl = buildUrl + "/rrr.loader.js";
     const config = {
