--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div id="loading-cover" style="display:none;">
     <div id="unity-loading-bar">      
-      <div id="unity-logo"><img src="wewe.png"></div>
+      <div id="unity-logo"><img src="logo_en.png"></div>
       <div id="unity-progress-bar-empty" style="display: none;">
         <div id="unity-progress-bar-full"></div>
     <div id="unity-label"></div>    
