--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
 
   <script>
 
+    const userLanguage = navigator.language || navigator.userLanguage;
     let logoSrc = "logo_en.png";
-    if (Application.systemLanguage == SystemLanguage.Spanish) {
+    if (userLanguage.startsWith("es")) {
         logoSrc = "logo_es.png";
-    } else if (Application.systemLanguage == SystemLanguage.Russian) {
+    } else if (userLanguage.startsWith("ru")) {
         logoSrc = "logo_ru.png";
     } else{
         logoSrc = "logo_en.png";
